[tool.poetry]
name = "tides"
version = "0.1.0"
description = ""
authors = ["Kyle Kelley <rgbkrk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.0"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
